--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -1,1 +1,14 @@
+# 计算机网络
+
+## OSI七层模型
+
+根据下图，我们能够知道OSI的七层模型有：
+ 1.物理层：这一层的数据称为比特，它的主要作用就是用来传输比特流（即底层数据传输），通信介质有光纤，双绞线等。
+ 2.数据链路层：
+ 3.网络层：
+ 4.传输层：
+ 5.会话层
+ 6.表示层：
+ 7.应用层：
+![image](https://user-images.githubusercontent.com/81791654/166203094-8e88f82f-348d-4c51-bdba-a2388ed659cf.png)
 
