--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -2,13 +2,115 @@
 
 ## OSI七层模型
 
-根据下图，我们能够知道OSI的七层模型有：
- 1.物理层：这一层的数据称为比特，它的主要作用就是用来传输比特流（即底层数据传输），通信介质有光纤，双绞线等。
- 2.数据链路层：
- 3.网络层：
- 4.传输层：
- 5.会话层
- 6.表示层：
- 7.应用层：
-![image](https://user-images.githubusercontent.com/81791654/166203094-8e88f82f-348d-4c51-bdba-a2388ed659cf.png)
+&emsp;&emsp;通过下图，我们能够知道OSI七层模型分别为：
+
+1. 物理层：主要定义物理设备标准，如网线的接口类型、光纤的接口类型、各种传输介质的传输速率等。它的主要作用是传输比特流。即底层数据传输。
+2. 数据链路层：定义了如何让格式化数据以帧为单位进行传输，以及如何让控制对物理介质的访问。
+3. 网络层：定义了IP编制，定义路由功能，如不同设备的数据转发。
+4. 传输层：定义了一些传输数据的协议和端口号。
+5. 会话层：通过传输层（端口号：传输端口和接收端口）建立数据传输的通路。控制应用程序之间会话的能力。
+6. 表示层：数据格式标识，基本压缩加密功能。
+7. 应用层：各种应用软件。
+
+
+![b113b118aa94d4f5619680a305749fda.png](en-resource://database/526:1)
+
+## 什么是协议
+
+### 典型协议
+
+* 传输层 常见协议有TCP/UDP协议。
+
+&emsp;&emsp;TCP传输控制协议（Transmission Control Protocol）是一种面向连接的、可靠的、基于字节流的传输层通信协议。
+
+&emsp;&emsp;UDP用户数据报协议（User Datagram Protocol）是OSI参考模型中一种无连接的传输层协议，提供面向事务的简单不可靠信息传送服务。
+
+>一般，域名解析用UDP协议，区域传送用TCP协议。
+>因为，UDP的特点是快，它只需要一个请求，一个应答就可以。所以它用来域名解析。而TCP协议的特点是可靠性高，而且其传输的内容大。所以常用来区域传输。
+
+
+* 应用层 常见的协议有HTTP协议，FTP协议。
+
+&emsp;&emsp;HTTP超文本传输协议（Hyper Text Transfer Protocol）是互联网上应用最为广泛的一种网络协议。
+
+&emsp;&emsp;FTP文件传输协议（File Transfer Protocol）
+
+* 网络层 常见协议有IP协议、ICMP协议、IGMP协议。
+
+&emsp;&emsp;IP协议是因特网互联协议（Internet Protocol）
+
+&emsp;&emsp;ICMP协议是Internet控制报文协议（Internet Control Message Protocol）它是TCP/IP协议族的一个子协议，用于在IP主机、路由器之间传递控制消息。
+
+&emsp;&emsp;IGMP协议是 Internet 组管理协议（Internet Group Management Protocol），是因特网协议家族中的一个组播协议。该协议运行在主机和组播路由器之间。
+
+* 网络接口层 常见协议有ARP协议、RARP协议。
+
+&emsp;&emsp;ARP协议是正向地址解析协议（Address Resolution Protocol），通过已知的IP，寻找对应主机的MAC地址。
+
+&emsp;&emsp;RARP是反向地址转换协议，通过MAC地址确定IP地址。
+
+
+
+
+## 网络应用程序设计模式
+
+### C/S模式
+
+&emsp;&emsp;传统的网络应用设计模式，客户机(client)/服务器(server)模式。需要在通讯两端各自部署客户机和服务器来完成数据通信。
+
+### B/S模式
+
+&emsp;&emsp;浏览器()/服务器(server)模式。只需在一端部署服务器，而另外一端使用每台PC都默认配置的浏览器即可完成数据的传输。
+
+### 优缺点
+
+&emsp;&emsp;对于C/S模式来说，其优点明显。客户端位于目标主机上可以保证性能，将数据缓存至客户端本地，从而提高数据传输效率。因此，传统的网络应用程序及较大型的网络应用程序都首选C/S模式进行开发。
+
+&emsp;&emsp;C/S模式的缺点也较突出。由于客户端和服务器都需要有一个开发团队来完成开发。工作量将成倍提升，开发周期较长。另外，从用户角度出发，需要将客户端安插至用户主机上，对用户主机的安全性构成威胁。这也是很多用户不愿使用C/S模式应用程序的重要原因。
+
+&emsp;&emsp;B/S模式相比C/S模式而言，由于它没有独立的客户端，使用标准浏览器作为客户端，其工作开发量较小。只需开发服务器端即可。另外由于其采用浏览器显示数据，因此移植性非常好，不受平台限制。
+
+&emsp;&emsp;B/S模式的缺点也较明显。由于使用第三方浏览器，因此网络应用支持受限。另外，没有客户端放到对方主机上，缓存数据不尽如人意，从而传输数据量受到限制。应用的观感大打折扣。第三，必须与浏览器一样，采用标准http协议进行通信，协议选择不灵活。
+
+### 通信过程
+
+&emsp;&emsp;两台计算机通过TCP/IP协议通讯的过程如下所示：
+
+![866bff006a44d3cf9acab57a5110962f.png](en-resource://database/528:1)
+
+&emsp;&emsp;上图对应两台计算机在同一网段中的情况，如果两台计算机在不同的网段中，那么数据从一台计算机到另一台计算机传输过程中要经过一个或多个路由器，如下图所示：
+
+![bd5390709975a4a4c9ceb92524673dcc.png](en-resource://database/530:1)
+
+&emsp;&emsp;链路层有以太网、令牌环网等标准，链路层负责网卡设备的驱动、帧同步（即从网线上检测到什么信号算作新帧的开始）、冲突检测（如果检测到冲突就自动重发）、数据差错校验等工作。交换机是工作在链路层的网络设备，可以在不同的链路层网络之间转发数据帧（比如十兆以太网和百兆以太网之间、以太网和令牌环网之间），由于不同链路层的帧格式不同，交换机要将进来的数据包拆掉链路层首部重新封装之后再转发。
+
+&emsp;&emsp;网络层的IP协议是构成Internet的基础。Internet上的主机通过IP地址来标识，Internet上有大量路由器负责根据IP地址选择合适的路径转发数据包，数据包从Internet上的源主机到目的主机往往要经过十多个路由器。路由器是工作在第三层的网络设备，同时兼有交换机的功能，可以在不同的链路层接口之间转发数据包，因此路由器需要将进来的数据包拆掉网络层和链路层两层首部并重新封装。IP协议不保证传输的可靠性，数据包在传输过程中可能丢失，可靠性可以在上层协议或应用程序中提供支持。
+
+&emsp;&emsp;网络层负责点到点（ptop，point-to-point）的传输（这里的“点”指主机或路由器），而传输层负责端到端（etoe，end-to-end）的传输（这里的“端”指源主机和目的主机）。传输层可选择TCP或UDP协议。
+
+&emsp;&emsp;TCP是一种面向连接的、可靠的协议，有点像打电话，双方拿起电话互通身份之后就建立了连接，然后说话就行了，这边说的话那边保证听得到，并且是按说话的顺序听到的，说完话挂机断开连接。也就是说TCP传输的双方需要首先建立连接，之后由TCP协议保证数据收发的可靠性，丢失的数据包自动重发，上层应用程序收到的总是可靠的数据流，通讯之后关闭连接。
+
+&emsp;&emsp;UDP是无连接的传输协议，不保证可靠性，有点像寄信，信写好放到邮筒里，既不能保证信件在邮递过程中不会丢失，也不能保证信件寄送顺序。使用UDP协议的应用程序需要自己完成丢包重发、消息排序等工作。
+
+&emsp;&emsp;目的主机收到数据包后，如何经过各层协议栈最后到达应用程序呢？其过程如下图所示：
+
+![6dbe239a9e1369e1ee90b6ef663a01db.png](en-resource://database/532:1)
+
+&emsp;&emsp;以太网驱动程序首先根据以太网首部中的“上层协议”字段确定该数据帧的有效载荷（payload，指除去协议首部之外实际传输的数据）是IP、ARP还是RARP协议的数据报，然后交给相应的协议处理。假如是IP数据报，IP协议再根据IP首部中的“上层协议”字段确定该数据报的有效载荷是TCP、UDP、ICMP还是IGMP，然后交给相应的协议处理。假如是TCP段或UDP段，TCP或UDP协议再根据TCP首部或UDP首部的“端口号”字段确定应该将应用层数据交给哪个用户进程。IP地址是标识网络中不同主机的地址，而端口号就是同一台主机上标识不同进程的地址，IP地址和端口号合起来标识网络中唯一的进程。
+
+&emsp;&emsp;虽然IP、ARP和RARP数据报都需要以太网驱动程序来封装成帧，但是从功能上划分，ARP和RARP属于链路层，IP属于网络层。虽然ICMP、IGMP、TCP、UDP的数据都需要IP协议来封装成数据报，但是从功能上划分，ICMP、IGMP与IP同属于网络层，TCP和UDP属于传输层。
+
+## TCP 协议
+
+### TCP通信时序
+
+&emsp;&emsp;下图是一次TCP通讯的时序图。TCP连接建立断开。包含三次握手和四次握手。
+![c3346139e66d803e360c9688464ee890.png](en-resource://database/534:0)
+
+&emsp;&emsp;在这个例子中，首先客户端主动发起连接、发送请求，然后服务器端响应请求，然后客户端主动关闭连接。两条竖线表示通讯的两端，从上到下表示时间的先后顺序，注意，数据从一端传到网络的另一端也需要时间，所以图中的箭头都是斜的。双方发送的段按时间顺序编号为1-10，各段中的主要信息在箭头上标出，例如段2的箭头上标着SYN, 8000(0), ACK1001, ，表示该段中的SYN位置1，32位序号是8000，该段不携带有效载荷（数据字节数为0），ACK位置1，32位确认序号是1001，带有一个mss（Maximum Segment Size，最大报文长度）选项值为1024。
+
+>建立连接（三次握手）的过程：
+>1、客户端发送一个带SYN标志的TCP报文到服务器。这是三次握手过程中的段1。
+&emsp;&emsp;客户端发出段1，SYN位表示连接请求。序号是1000，这个序号在网络通讯中用作临时的地址，每发一个数据字节，这个序号要加1，这样在接收端可以根据序号排出数据包的正确顺序，也可以发现丢包的情况，另外，规定SYN位和FIN位也要占一个序号，这次虽然没发数据，但是由于发了SYN位，因此下次再发送应该用序号1001。mss表示最大段尺寸，如果一个段太大，封装成帧后超过了链路层的最大帧长度，就必须在IP层分片，为了避免这种情况，客户端声明自己的最大段尺寸，建议服务器端发来的段不要超过这个长度。
+
 
