--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -13,7 +13,7 @@
 7. 应用层：各种应用软件。
 
 
-![b113b118aa94d4f5619680a305749fda.png](en-resource://database/526:1)
+![image](https://user-images.githubusercontent.com/81791654/166210520-656d1b1a-98dc-42ca-8b04-17c19da7bfc7.png)
 
 ## 什么是协议
 
@@ -76,11 +76,9 @@
 
 &emsp;&emsp;两台计算机通过TCP/IP协议通讯的过程如下所示：
 
-![866bff006a44d3cf9acab57a5110962f.png](en-resource://database/528:1)
 
 &emsp;&emsp;上图对应两台计算机在同一网段中的情况，如果两台计算机在不同的网段中，那么数据从一台计算机到另一台计算机传输过程中要经过一个或多个路由器，如下图所示：
 
-![bd5390709975a4a4c9ceb92524673dcc.png](en-resource://database/530:1)
 
 &emsp;&emsp;链路层有以太网、令牌环网等标准，链路层负责网卡设备的驱动、帧同步（即从网线上检测到什么信号算作新帧的开始）、冲突检测（如果检测到冲突就自动重发）、数据差错校验等工作。交换机是工作在链路层的网络设备，可以在不同的链路层网络之间转发数据帧（比如十兆以太网和百兆以太网之间、以太网和令牌环网之间），由于不同链路层的帧格式不同，交换机要将进来的数据包拆掉链路层首部重新封装之后再转发。
 
@@ -94,7 +92,6 @@
 
 &emsp;&emsp;目的主机收到数据包后，如何经过各层协议栈最后到达应用程序呢？其过程如下图所示：
 
-![6dbe239a9e1369e1ee90b6ef663a01db.png](en-resource://database/532:1)
 
 &emsp;&emsp;以太网驱动程序首先根据以太网首部中的“上层协议”字段确定该数据帧的有效载荷（payload，指除去协议首部之外实际传输的数据）是IP、ARP还是RARP协议的数据报，然后交给相应的协议处理。假如是IP数据报，IP协议再根据IP首部中的“上层协议”字段确定该数据报的有效载荷是TCP、UDP、ICMP还是IGMP，然后交给相应的协议处理。假如是TCP段或UDP段，TCP或UDP协议再根据TCP首部或UDP首部的“端口号”字段确定应该将应用层数据交给哪个用户进程。IP地址是标识网络中不同主机的地址，而端口号就是同一台主机上标识不同进程的地址，IP地址和端口号合起来标识网络中唯一的进程。
 
@@ -105,7 +102,7 @@
 ### TCP通信时序
 
 &emsp;&emsp;下图是一次TCP通讯的时序图。TCP连接建立断开。包含三次握手和四次握手。
-![c3346139e66d803e360c9688464ee890.png](en-resource://database/534:0)
+![image](https://user-images.githubusercontent.com/81791654/166210698-7c57d807-ca63-4189-b488-e293796dbd12.png)
 
 &emsp;&emsp;在这个例子中，首先客户端主动发起连接、发送请求，然后服务器端响应请求，然后客户端主动关闭连接。两条竖线表示通讯的两端，从上到下表示时间的先后顺序，注意，数据从一端传到网络的另一端也需要时间，所以图中的箭头都是斜的。双方发送的段按时间顺序编号为1-10，各段中的主要信息在箭头上标出，例如段2的箭头上标着SYN, 8000(0), ACK1001, ，表示该段中的SYN位置1，32位序号是8000，该段不携带有效载荷（数据字节数为0），ACK位置1，32位确认序号是1001，带有一个mss（Maximum Segment Size，最大报文长度）选项值为1024。
 
