--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -102,12 +102,18 @@
 ### TCP通信时序
 
 &emsp;&emsp;下图是一次TCP通讯的时序图。TCP连接建立断开。包含三次握手和四次握手。
+
 ![image](https://user-images.githubusercontent.com/81791654/166210698-7c57d807-ca63-4189-b488-e293796dbd12.png)
 
-&emsp;&emsp;在这个例子中，首先客户端主动发起连接、发送请求，然后服务器端响应请求，然后客户端主动关闭连接。两条竖线表示通讯的两端，从上到下表示时间的先后顺序，注意，数据从一端传到网络的另一端也需要时间，所以图中的箭头都是斜的。双方发送的段按时间顺序编号为1-10，各段中的主要信息在箭头上标出，例如段2的箭头上标着SYN, 8000(0), ACK1001, ，表示该段中的SYN位置1，32位序号是8000，该段不携带有效载荷（数据字节数为0），ACK位置1，32位确认序号是1001，带有一个mss（Maximum Segment Size，最大报文长度）选项值为1024。
+**三报文握手：**
+
+&emsp;&emsp;三次握手其实就是指建立一个TCP连接时，需要客户端和服务端总共发送3个包。进行三次握手的主要作用就是为了确认双方的接收能力和发送能力是否正常、指定自己的初始化序列号为后面的可靠性传送做准备。实质上就是连接服务器指定端口，建立TCP连接，并同步连接双方的序列号和确认号，交换TCP窗口大小信息。
 
 >建立连接（三次握手）的过程：
->1、客户端发送一个带SYN标志的TCP报文到服务器。这是三次握手过程中的段1。
-&emsp;&emsp;客户端发出段1，SYN位表示连接请求。序号是1000，这个序号在网络通讯中用作临时的地址，每发一个数据字节，这个序号要加1，这样在接收端可以根据序号排出数据包的正确顺序，也可以发现丢包的情况，另外，规定SYN位和FIN位也要占一个序号，这次虽然没发数据，但是由于发了SYN位，因此下次再发送应该用序号1001。mss表示最大段尺寸，如果一个段太大，封装成帧后超过了链路层的最大帧长度，就必须在IP层分片，为了避免这种情况，客户端声明自己的最大段尺寸，建议服务器端发来的段不要超过这个长度。
+>刚开始客户端处于Closed的状态，服务端处于Listen状态，进行三次握手：
+>&emsp;&emsp;第一次握手：客户端给服务端发一个SYN报文，并指明客户端的初始化序列号ISN(c)。此时客户端处于SYN_SEND状态。（首部的同步位SYN=1,初始化序列号seq=x,SYN=1的报文段不饿能携带数据，但要消耗掉一个序号。）
+>&emsp;&emsp;第二次握手：服务器接收到客户端的SYN报文之后，会以自己的SYN报文作为应答，并且也指定了自己的初始化序列号ISN(s)。同时会把客户端的ISN+1作为自己的ACK的值，表示自己已经收到了客户端的SYN，此时服务器处于SYN_RCVD状态。（在确认报文段中SYN=1，ACK=1，确认号ack=x+1，初始序号seq=y。
+>&emsp;&emsp;第三次握手：客户端收到SYN报文后，会发送一个ACK报文，当然，也是一样把服务器的ISN+1作为ACK的值，表示已经收到了服务端的SYN报文，此时客户端处于ESTABLISHED状态。服务器收到ACK报文之后，也处于ESTABLISHED状态，此时，双方已建立起了连接。（确认报文段ACK=1，确认号ack=y+1，序号seq=x+1（初始为x，第二个报文段所以+1），ACK报文段可以携带数据，不携带数据则不消耗序号。）
+>在socket编程中，客户端执行connect()时，将触发三次握手。
 
 
