--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -110,10 +110,14 @@
 &emsp;&emsp;三次握手其实就是指建立一个TCP连接时，需要客户端和服务端总共发送3个包。进行三次握手的主要作用就是为了确认双方的接收能力和发送能力是否正常、指定自己的初始化序列号为后面的可靠性传送做准备。实质上就是连接服务器指定端口，建立TCP连接，并同步连接双方的序列号和确认号，交换TCP窗口大小信息。
 
 >建立连接（三次握手）的过程：
->刚开始客户端处于Closed的状态，服务端处于Listen状态，进行三次握手：
->&emsp;&emsp;第一次握手：客户端给服务端发一个SYN报文，并指明客户端的初始化序列号ISN(c)。此时客户端处于SYN_SEND状态。（首部的同步位SYN=1,初始化序列号seq=x,SYN=1的报文段不饿能携带数据，但要消耗掉一个序号。）
->&emsp;&emsp;第二次握手：服务器接收到客户端的SYN报文之后，会以自己的SYN报文作为应答，并且也指定了自己的初始化序列号ISN(s)。同时会把客户端的ISN+1作为自己的ACK的值，表示自己已经收到了客户端的SYN，此时服务器处于SYN_RCVD状态。（在确认报文段中SYN=1，ACK=1，确认号ack=x+1，初始序号seq=y。
->&emsp;&emsp;第三次握手：客户端收到SYN报文后，会发送一个ACK报文，当然，也是一样把服务器的ISN+1作为ACK的值，表示已经收到了服务端的SYN报文，此时客户端处于ESTABLISHED状态。服务器收到ACK报文之后，也处于ESTABLISHED状态，此时，双方已建立起了连接。（确认报文段ACK=1，确认号ack=y+1，序号seq=x+1（初始为x，第二个报文段所以+1），ACK报文段可以携带数据，不携带数据则不消耗序号。）
->在socket编程中，客户端执行connect()时，将触发三次握手。
 
+>刚开始客户端处于Closed的状态，服务端处于Listen状态，进行三次握手：
+
+>&emsp;&emsp;第一次握手：客户端给服务端发一个SYN报文，并指明客户端的初始化序列号ISN(c)。此时客户端处于SYN_SEND状态。（首部的同步位SYN=1,初始化序列号seq=x,SYN=1的报文段不饿能携带数据，但要消耗掉一个序号。）
+
+>&emsp;&emsp;第二次握手：服务器接收到客户端的SYN报文之后，会以自己的SYN报文作为应答，并且也指定了自己的初始化序列号ISN(s)。同时会把客户端的ISN+1作为自己的ACK的值，表示自己已经收到了客户端的SYN，此时服务器处于SYN_RCVD状态。（在确认报文段中SYN=1，ACK=1，确认号ack=x+1，初始序号seq=y。
+
+>&emsp;&emsp;第三次握手：客户端收到SYN报文后，会发送一个ACK报文，当然，也是一样把服务器的ISN+1作为ACK的值，表示已经收到了服务端的SYN报文，此时客户端处于ESTABLISHED状态。服务器收到ACK报文之后，也处于ESTABLISHED状态，此时，双方已建立起了连接。（确认报文段ACK=1，确认号ack=y+1，序号seq=x+1（初始为x，第二个报文段所以+1），ACK报文段可以携带数据，不携带数据则不消耗序号。）
+
+**在socket编程中，客户端执行connect()时，将触发三次握手。**
 
