--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -121,3 +121,73 @@
 
 **在socket编程中，客户端执行connect()时，将触发三次握手。**
 
+思考题1：为什么需要三次握手，两次不行吗？
+
+&emsp;&emsp;弄清楚这个问题，我们需要先弄明白三次握手的目的是什么，能不能用两次握手来达到这个目的？
+
+&emsp;&emsp;第一次握手：客户端发送网络包，服务端收到了。这样服务端就能得出结论：客户端的发送能力、服务端的接收能力是正常的。
+
+&emsp;&emsp;第二次握手：服务端发送包，客户端收到了。这样客户端就能得出结论：服务端的接收、发送能力，客户端的发送接受能力是正常的。不过此时服务器并不能确认客户端的接收能力是否正常。
+
+&emsp;&emsp;第三次握手：客户端发包，服务端收到了。这样服务端就能得出结论：客户端接收和发送能力正常，服务器自己接收发送能力也正常。
+
+因此，需要三次握手才能确认双方的接收和发送能力是否正常。
+
+&emsp;&emsp;试想如果是两次握手，则会出现下面这种情况。
+
+&emsp;&emsp;如果客户端发送连接请求，但因连接请求丢失而未收到确认，于是客户端再重传一次连接请求。后来收到了确认，建立了连接。数据传输完毕后，就释放了连接，客户端共发送了两个连接请求报文段。其中一个丢失了，第二个到达了服务端，但是第一个丢失的报文段这只是在某些网络结点长时间滞留，延误到连接释放后的某个时间段才到达服务端，此时服务端误认为客户端又发出一次新的连接请求，于是就向客户端发送确认报文段，同意建立连接，不采样三次握手，只要服务端发出确认，就建立新的连接了，此时客户端忽略服务端发来的确认，也不发送数据，则服务端一直等待客户端发送数据，浪费了资源。
+
+思考题2：三次握手过程中可以携带数据吗？
+
+其实第三次握手的时候是可以携带数据的。但是第一次和第二次不能携带。
+
+为什么？加入第一次握手可以携带数据的话，如果有人恶意攻击服务器，那么他可以在第一次握手中的SYN报文中放入大量的数据，因为攻击者根本不理服务器的接收、发送能力是否正常，然后重复发SYN报文的话，这会让服务器花费很多时间、内存空间来接收这些报文。
+
+也就是说，第一次握手不放数据的话，其中一个简单的原因就是会让服务器更加容易受到攻击了。而对于第三次的话，客户端已经处于ESTABLISHED状态。对于客户端来说，他已经建立起连接了。并且也知道服务器的接收、发送能力是正常的了，所以能携带数据也没问题。
+
+**四报文挥手：**
+
+&emsp;&emsp;建立一个连接需要三次握手，终止一个连接需要四次挥手。这是TCP的半关闭造成的。所谓的半关闭，其实就是TCP提供了连接的一端在结束它的发送后还能接收来自另一端数据的能力。
+
+>关闭连接（四次握手）的过程：
+
+>刚开始双方都处于ESTABLISHED状态，假如是客户端先发起关闭请求。四次挥手过程如下：
+
+>第一次挥手：客户端发送一个FIN报文，报文会指定一个序列号。此时客户端处于FIN_WAIT1状态。即发出连接释放报文段（FIN=1，序号seq=u),并停止再发送数据，主动关闭TCP连接，进入FIN_WAIT1（终止等待1）状态，等待服务端的确认。
+
+>第二次挥手
+
+
+### TCP状态转换
+
+![image](https://user-images.githubusercontent.com/81791654/166246730-a2c9d530-9c7c-4490-99ae-00f25a843abd.png)
+
+CLOSED：表示初始状态。
+
+LISTEN：该状态表示服务器端的某个SOCKET处于监听状态，可以接受连接。
+
+SYN_SENT：这个状态与SYN_RCVD遥相呼应，当客户端SOCKET执行CONNECT连接时，它首先发送SYN报文，随即进入到了SYN_SENT状态，并等待服务端的发送三次握手中的第2个报文。SYN_SENT状态表示客户端已发送SYN报文。
+
+SYN_RCVD: 该状态表示接收到SYN报文，在正常情况下，这个状态是服务器端的SOCKET在建立TCP连接时的三次握手会话过程中的一个中间状态，很短暂。此种状态时，当收到客户端的ACK报文后，会进入到ESTABLISHED状态。
+
+ESTABLISHED：表示连接已经建立。
+
+FIN_WAIT_1:  FIN_WAIT_1和FIN_WAIT_2状态的真正含义都是表示等待对方的FIN报文。区别是：
+
+FIN_WAIT_1状态是当socket在ESTABLISHED状态时，想主动关闭连接，向对方发送了FIN报文，此时该socket进入到FIN_WAIT_1状态。
+
+FIN_WAIT_2状态是当对方回应ACK后，该socket进入到FIN_WAIT_2状态，正常情况下，对方应马上回应ACK报文，所以FIN_WAIT_1状态一般较难见到，而FIN_WAIT_2状态可用netstat看到。
+
+FIN_WAIT_2：主动关闭链接的一方，发出FIN收到ACK以后进入该状态。称之为半连接或半关闭状态。该状态下的socket只能接收数据，不能发。
+
+TIME_WAIT: 表示收到了对方的FIN报文，并发送出了ACK报文，等2MSL后即可回到CLOSED可用状态。如果FIN_WAIT_1状态下，收到对方同时带 FIN标志和ACK标志的报文时，可以直接进入到TIME_WAIT状态，而无须经过FIN_WAIT_2状态。
+
+CLOSING: 这种状态较特殊，属于一种较罕见的状态。正常情况下，当你发送FIN报文后，按理来说是应该先收到（或同时收到）对方的 ACK报文，再收到对方的FIN报文。但是CLOSING状态表示你发送FIN报文后，并没有收到对方的ACK报文，反而却也收到了对方的FIN报文。什么情况下会出现此种情况呢？如果双方几乎在同时close一个SOCKET的话，那么就出现了双方同时发送FIN报文的情况，也即会出现CLOSING状态，表示双方都正在关闭SOCKET连接。
+
+CLOSE_WAIT: 此种状态表示在等待关闭。当对方关闭一个SOCKET后发送FIN报文给自己，系统会回应一个ACK报文给对方，此时则进入到CLOSE_WAIT状态。接下来呢，察看是否还有数据发送给对方，如果没有可以 close这个SOCKET，发送FIN报文给对方，即关闭连接。所以在CLOSE_WAIT状态下，需要关闭连接。
+
+LAST_ACK: 该状态是被动关闭一方在发送FIN报文后，最后等待对方的ACK报文。当收到ACK报文后，即可以进入到CLOSED可用状态。
+
+
+
+
