--- a/socket网络编程/网络知识充电/计网.md
+++ b/socket网络编程/网络知识充电/计网.md
@@ -113,7 +113,7 @@
 
 >刚开始客户端处于Closed的状态，服务端处于Listen状态，进行三次握手：
 
->&emsp;&emsp;第一次握手：客户端给服务端发一个SYN报文，并指明客户端的初始化序列号ISN(c)。此时客户端处于SYN_SEND状态。（首部的同步位SYN=1,初始化序列号seq=x,SYN=1的报文段不饿能携带数据，但要消耗掉一个序号。）
+>&emsp;&emsp;第一次握手：客户端给服务端发一个SYN报文，并指明客户端的初始化序列号ISN(c)。此时客户端处于SYN_SEND状态。（首部的同步位SYN=1,初始化序列号seq=x,SYN=1的报文段不能携带数据，但要消耗掉一个序号。）
 
 >&emsp;&emsp;第二次握手：服务器接收到客户端的SYN报文之后，会以自己的SYN报文作为应答，并且也指定了自己的初始化序列号ISN(s)。同时会把客户端的ISN+1作为自己的ACK的值，表示自己已经收到了客户端的SYN，此时服务器处于SYN_RCVD状态。（在确认报文段中SYN=1，ACK=1，确认号ack=x+1，初始序号seq=y。
 
@@ -143,11 +143,13 @@
 
 为什么？加入第一次握手可以携带数据的话，如果有人恶意攻击服务器，那么他可以在第一次握手中的SYN报文中放入大量的数据，因为攻击者根本不理服务器的接收、发送能力是否正常，然后重复发SYN报文的话，这会让服务器花费很多时间、内存空间来接收这些报文。
 
-也就是说，第一次握手不放数据的话，其中一个简单的原因就是会让服务器更加容易受到攻击了。而对于第三次的话，客户端已经处于ESTABLISHED状态。对于客户端来说，他已经建立起连接了。并且也知道服务器的接收、发送能力是正常的了，所以能携带数据也没问题。
+也就是说，第一次握手不可以放数据，其中一个简单的原因就是会让服务器更加容易受到攻击了。而对于第三次的话，客户端已经处于ESTABLISHED状态。对于客户端来说，他已经建立起连接了。并且也知道服务器的接收、发送能力是正常的了，所以能携带数据也没问题。
 
 **四报文挥手：**
 
 &emsp;&emsp;建立一个连接需要三次握手，终止一个连接需要四次挥手。这是TCP的半关闭造成的。所谓的半关闭，其实就是TCP提供了连接的一端在结束它的发送后还能接收来自另一端数据的能力。
+
+&emsp;&emsp;TCP连接的拆除需要发送四个包，因此称为四次挥手，客户端和服务器均可以主动发起挥手动作。
 
 >关闭连接（四次握手）的过程：
 
@@ -155,7 +157,7 @@
 
 >第一次挥手：客户端发送一个FIN报文，报文会指定一个序列号。此时客户端处于FIN_WAIT1状态。即发出连接释放报文段（FIN=1，序号seq=u),并停止再发送数据，主动关闭TCP连接，进入FIN_WAIT1（终止等待1）状态，等待服务端的确认。
 
->第二次挥手
+>第二次挥手：服务端收到FIN之后，会发送ACK报文，且把客户端的序列号+1作为ACK报文的序列号值，表明已经收到了客户端的报文了，此时服务端处于CLOSE_WAIT状态。即服务端收到连接释放报文段后即发出确认报文段（ACK=1，确认号ack=u+1，序号seq=v），服务端进入CLOSRE_WAIT（关闭等待）状态，此时的TCP处于半关闭状态，客户端到服务端的连接释放。客户端收到服务端的确认后，进入FIN_WAIT2（终止等待2）状态，等待服务端发出的连接释放报文段。
 
 
 ### TCP状态转换
